tests/paczka2/big_fuzzy/34920944.err
Error in line 9: rIWs3QqB S898 55,0
Error in line 12: QOwJf5fIrFI S898 80,6
Error in line 17: QOwJf5fIrFI A160 15,9
Error in line 41: rIWs3QqB S898 2,6
Error in line 26: zQ1q A40 55,1
Error in line 39: d3bCFGQ A160 73,0
Error in line 49: A160 A160 0,0
Error in line 55: d3bCFGQ S898 13,9
Error in line 57: WOJF4yt S653 9,1
Error in line 48: zQ1q S898 25,0
Error in line 62: WOJF4yt A40 74,5
Error in line 58: d3bCFGQ A160 74,6
Error in line 74: QOwJf5fIrFI A160 57,5
Error in line 75: QOwJf5fIrFI S653 1,4
Error in line 82: Fl3Z A40 26,11
Error in line 86: WOJF4yt A40 0,0
Error in line 89: Fl3Z A40 28,4
Error in line 100: QOwJf5fIrFI S898 53,6
Error in line 103: QOwJf5fIrFI S653 41,9
Error in line 70: rIWs3QqB A160 79,0
Error in line 111: A160 S898 48,10
Error in line 107: rIWs3QqB A40 97,4
Error in line 120: rIWs3QqB A160 16,8
Error in line 123: rIWs3QqB A40 38,1
Error in line 115: WOJF4yt S653 39,0
Error in line 121: zQ1q A160 42,5
Error in line 143: d3bCFGQ S653 88,9
Error in line 159: rIWs3QqB A160 40,8
Error in line 158: QOwJf5fIrFI S898 9,0
Error in line 173: QOwJf5fIrFI S653 76,5
Error in line 172: zQ1q S653 6,9
Error in line 186: A160 A40 233,0
Error in line 191: WOJF4yt S653 21,2
Error in line 180: rIWs3QqB S898 62,7
Error in line 189: Fl3Z A40 58,8
Error in line 196: Fl3Z S653 13,7
Error in line 203: zQ1q S653 57,0
Error in line 199: d3bCFGQ S898 7,8
Error in line 205: Fl3Z A40 91,8
Error in line 209: Fl3Z A160 63,1
Error in line 215: Fl3Z A160 31,6
Error in line 217: WOJF4yt A40 46,5
Error in line 219: WOJF4yt S653 9,7
Error in line 221: d3bCFGQ S653 60,7
Error in line 236: zQ1q S653 69,2
